some properties to start with

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" /> <!-- Link to your CSS file -->
 </head>
+
 <body>
 
     <!-- Header Section -->
@@ -23,29 +25,80 @@
 
     <!-- Main Section -->
     <main>
-        <section class="hero">
-            <h1>Welcome to Our Website!</h1>
-            <p>Your one-stop solution for everything.</p>
-            <a href="#services" class="btn">Explore Our Services</a>
-        </section>
 
-        <section id="services">
-            <h2>Our Services</h2>
-            <div class="service-grid">
-                <div class="service-card">
-                    <h3>Service One</h3>
-                    <p>We provide amazing service one that will blow your mind.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Service Two</h3>
-                    <p>Service two is designed to meet all your needs efficiently.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Service Three</h3>
-                    <p>We are known for delivering top-notch service three.</p>
-                </div>
-            </div>
-        </section>
+        <!-- Basic CSS Properties -->
+        <h2>Basic CSS Properties</h2>
+        <p>These are the most commonly used properties when starting out with CSS.</p>
+        <ul>
+            <li>color: Defines the text color.</li>
+            <li>background-color: Sets the background color of an element.</li>
+            <li>font-size: Adjusts the size of the font.</li>
+            <li>font-family: Specifies the font to be used.</li>
+            <li>margin: Defines the space around an element.</li>
+            <li>padding: Sets the space between the content and its border.</li>
+            <li>border: Adds a border around an element (e.g., border: 1px solid black).</li>
+            <li>width / height: Defines the width and height of an element.</li>
+            <li>text-align: Aligns text inside an element (left, right, center, justify).</li>
+            <li>display: Defines how an element is displayed (block, inline, flex, none, etc.).</li>
+            <li>background-image: Sets a background image for an element.</li>
+            <li>line-height: Controls the space between lines of text.</li>
+            <li>list-style: Specifies the type of list item marker (circle, square, etc.).</li>
+            <li>opacity: Defines the transparency of an element.</li>
+            <li>overflow: Controls the overflow behavior (hidden, scroll, visible, auto).</li>
+        </ul>
+
+        <!-- Medium CSS Properties -->
+        <h2>Medium CSS Properties</h2>
+        <p>These are properties used for more complex layouts and design improvements.</p>
+        <ul>
+            <li>position: Specifies the positioning of an element (relative, absolute, fixed, sticky).</li>
+            <li>z-index: Controls the stacking order of positioned elements.</li>
+            <li>float: Positions elements side by side or moves them left or right.</li>
+            <li>flex: Used to create flexible layouts with Flexbox.</li>
+            <li>grid: Defines a grid-based layout system.</li>
+            <li>align-items / justify-content: Used in Flexbox/Grid for alignment.</li>
+            <li>transform: Applies 2D or 3D transformations to elements (e.g., rotate, scale).</li>
+            <li>transition: Adds smooth transitions between CSS property changes.</li>
+            <li>box-shadow: Adds shadow effects around elements.</li>
+            <li>text-shadow: Applies shadows to text.</li>
+            <li>media queries: Used for responsive design by applying different styles based on screen size or
+                device type.</li>
+            <li>object-fit: Controls how content (like images) fits inside its container (fill, contain, cover).
+            </li>
+            <li>vertical-align: Aligns inline or table-cell elements vertically.</li>
+            <li>cursor: Specifies the type of cursor to display when hovering over an element.</li>
+            <li>background-size: Adjusts the size of background images (cover, contain).</li>
+        </ul>
+
+        <!-- Advanced CSS Properties -->
+        <h2>Advanced CSS Properties</h2>
+        <p>These properties are often used in more complex and responsive design solutions.</p>
+        <ul>
+            <li>clamp(): A function that allows setting a CSS property to scale between a minimum, maximum, and
+                preferred value.</li>
+            <li>min() / max(): Functions that return the minimum or maximum of two or more values (e.g., width:
+                min(100%, 600px)).</li>
+            <li>aspect-ratio: Sets the aspect ratio of an element, helping maintain proportions.</li>
+            <li>calc(): Allows performing calculations to determine CSS values dynamically (e.g., width:
+                calc(100% - 50px)).</li>
+            <li>@supports: Used for feature queries to apply styles if a browser supports certain CSS
+                properties.</li>
+            <li>filter: Applies graphical effects like blur, brightness, contrast, etc., to elements (e.g.,
+                filter: blur(5px)).</li>
+            <li>backdrop-filter: Applies graphical effects to the area behind an element.</li>
+            <li>grid-template-areas: Used for creating layouts with named grid areas.</li>
+            <li>content-visibility: Optimizes performance by skipping rendering work for off-screen content
+                until it is needed.</li>
+            <li>scroll-snap: Defines scroll snapping behavior to align content when scrolling.</li>
+            <li>object-position: Aligns replaced elements (like images or videos) inside their box.</li>
+            <li>isolation: Defines whether an element creates a new stacking context.</li>
+            <li>mix-blend-mode: Defines how an element’s content should blend with its background.</li>
+            <li>will-change: Hints to the browser what property of an element will change, allowing for
+                optimization.</li>
+            <li>contain: Limits the scope of an element's layout, style, and paint containment to optimize
+                rendering performance.</li>
+        </ul>
+
     </main>
 
     <!-- Footer Section -->
@@ -54,4 +107,5 @@
     </footer>
 
 </body>
+
 </html>
