--- a/app/index.html
+++ b/app/index.html
@@ -26,93 +26,22 @@
                 <p>CSS selectors are patterns used to select elements in the DOM.</p>
             </div>
 
-
-            <h4>Basic CSS Selectors</h4>
+            <h4> CSS Selectors</h4>
             <ol>
-                <li><a href="/">:active</a></li>
-                <li><a href="/">:any-link</a></li>
-                <li><a href="/">:autofill</a></li>
-                <li><a href="/">Adjacent sibling</a></li>
-                <li><a href="/">[attribute]</a></li>
-                <li><a href="/">Child</a></li>
-                <li><a href="/">Class</a></li>
-                <li><a href="/">ID</a></li>
-                <li><a href="/">:link</a></li>
-                <li><a href="/">Universal</a></li>
-                <li><a href="/">Type</a></li>
-            </ol>
-
-
-            <h4>Medium CSS Selectors</h4>
-            <ol>
-                <li><a href="/">::after/::before</a></li>
                 <li><a href="/">:blank</a></li>
-                <li><a href="/">:checked</a></li>
-                <li><a href="/">:current</a></li>
                 <li><a href="/">:default</a></li>
                 <li><a href="/">:defined</a></li>
-                <li><a href="/">:dir()</a></li>
-                <li><a href="/">:disabled</a></li>
-                <li><a href="/">Descendant</a></li>
-                <li><a href="/">:empty</a></li>
-                <li><a href="/">:enabled</a></li>
-                <li><a href="/">::file-selector-button</a></li>
-                <li><a href="/">::first-letter</a></li>
-                <li><a href="/">::first-line</a></li>
                 <li><a href="/">:first</a></li>
-                <li><a href="/">:first-child</a></li>
                 <li><a href="/">:first-of-type</a></li>
-                <li><a href="/">:focus</a></li>
-                <li><a href="/">:focus-visible</a></li>
-                <li><a href="/">:focus-within</a></li>
-                <li><a href="/">::marker</a></li>
-                <li><a href="/">:hover</a></li>
-                <li><a href="/">:in-range</a></li>
-                <li><a href="/">:indeterminate</a></li>
-                <li><a href="/">:invalid</a></li>
                 <li><a href="/">:is</a></li>
-                <li><a href="/">:lang()</a></li>
-                <li><a href="/">:last-child</a></li>
                 <li><a href="/">:last-of-type</a></li>
                 <li><a href="/">:left</a></li>
                 <li><a href="/">:not</a></li>
-                <li><a href="/">:nth-child</a></li>
-                <li><a href="/">:nth-last-child</a></li>
-                <li><a href="/">:nth-last-of-type</a></li>
-                <li><a href="/">:nth-of-type</a></li>
-                <li><a href="/">:only-child</a></li>
-                <li><a href="/">:only-of-type</a></li>
-                <li><a href="/">:optional</a></li>
-                <li><a href="/">:out-of-range</a></li>
-                <li><a href="/">::placeholder</a></li>
-                <li><a href="/">:read-write / :read-only</a></li>
-                <li><a href="/">:required</a></li>
                 <li><a href="/">:right</a></li>
-                <li><a href="/">:root</a></li>
                 <li><a href="/">:target</a></li>
                 <li><a href="/">:user-invalid</a></li>
-            </ol>
-
-
-            <h4>Advanced CSS Selectors</h4>
-            <ol>
-                <li><a href="/">::backdrop</a></li>
-                <li><a href="/">:future</a></li>
-                <li><a href="/">:has()</a></li>
-                <li><a href="/">:popover-open</a></li>
-                <li><a href="/">::view-transition</a></li>
-                <li><a href="/">::view-transition-group</a></li>
-                <li><a href="/">::view-transition-image-new</a></li>
-                <li><a href="/">::view-transition-image-old</a></li>
-                <li><a href="/">::view-transition-image-pair</a></li>
-                <li><a href="/">:valid</a></li>
-                <li><a href="/">:visited</a></li>
                 <li><a href="/">:where</a></li>
                 <li><a href="/">::details-content</a></li>
-                <li><a href="/">:dir()</a></li>
-                <li><a href="/">:popover-open</a></li>
-                <li><a href="/">::selection</a></li>
-                <li><a href="/">::file-selector-button</a></li>
             </ol>
 
 
@@ -563,77 +492,20 @@
 
         </nav>
 
-        <!-- Basic CSS Properties -->
-        <h2>Basic</h2>
-        <p>These are the most commonly used properties when starting out with CSS.</p>
-        <ul>
-            <li>color: Defines the text color.</li>
-            <li>background-color: Sets the background color of an element.</li>
-            <li>font-size: Adjusts the size of the font.</li>
-            <li>font-family: Specifies the font to be used.</li>
-            <li>margin: Defines the space around an element.</li>
-            <li>padding: Sets the space between the content and its border.</li>
-            <li>border: Adds a border around an element (e.g., border: 1px solid black).</li>
-            <li>width / height: Defines the width and height of an element.</li>
-            <li>text-align: Aligns text inside an element (left, right, center, justify).</li>
-            <li>display: Defines how an element is displayed (block, inline, flex, none, etc.).</li>
-            <li>background-image: Sets a background image for an element.</li>
-            <li>line-height: Controls the space between lines of text.</li>
-            <li>list-style: Specifies the type of list item marker (circle, square, etc.).</li>
-            <li>opacity: Defines the transparency of an element.</li>
-            <li>overflow: Controls the overflow behavior (hidden, scroll, visible, auto).</li>
-        </ul>
 
-        <!-- Medium CSS Properties -->
-        <h2>Medium</h2>
-        <p>These are properties used for more complex layouts and design improvements.</p>
+
         <ul>
-            <li>position: Specifies the positioning of an element (relative, absolute, fixed, sticky).</li>
-            <li>z-index: Controls the stacking order of positioned elements.</li>
-            <li>float: Positions elements side by side or moves them left or right.</li>
-            <li>flex: Used to create flexible layouts with Flexbox.</li>
-            <li>grid: Defines a grid-based layout system.</li>
-            <li>align-items / justify-content: Used in Flexbox/Grid for alignment.</li>
-            <li>transform: Applies 2D or 3D transformations to elements (e.g., rotate, scale).</li>
-            <li>transition: Adds smooth transitions between CSS property changes.</li>
-            <li>box-shadow: Adds shadow effects around elements.</li>
-            <li>text-shadow: Applies shadows to text.</li>
             <li>media queries: Used for responsive design by applying different styles based on screen size or
                 device type.</li>
-            <li>object-fit: Controls how content (like images) fits inside its container (fill, contain, cover).
-            </li>
-            <li>vertical-align: Aligns inline or table-cell elements vertically.</li>
-            <li>cursor: Specifies the type of cursor to display when hovering over an element.</li>
-            <li>background-size: Adjusts the size of background images (cover, contain).</li>
-        </ul>
-
-        <!-- Advanced CSS Properties -->
-        <h2>Advanced</h2>
-        <p>These properties are often used in more complex and responsive design solutions.</p>
-        <ul>
             <li>clamp(): A function that allows setting a CSS property to scale between a minimum, maximum, and
                 preferred value.</li>
             <li>min() / max(): Functions that return the minimum or maximum of two or more values (e.g., width:
                 min(100%, 600px)).</li>
-            <li>aspect-ratio: Sets the aspect ratio of an element, helping maintain proportions.</li>
             <li>calc(): Allows performing calculations to determine CSS values dynamically (e.g., width:
                 calc(100% - 50px)).</li>
             <li>@supports: Used for feature queries to apply styles if a browser supports certain CSS
                 properties.</li>
-            <li>filter: Applies graphical effects like blur, brightness, contrast, etc., to elements (e.g.,
-                filter: blur(5px)).</li>
-            <li>backdrop-filter: Applies graphical effects to the area behind an element.</li>
-            <li>grid-template-areas: Used for creating layouts with named grid areas.</li>
-            <li>content-visibility: Optimizes performance by skipping rendering work for off-screen content
-                until it is needed.</li>
-            <li>scroll-snap: Defines scroll snapping behavior to align content when scrolling.</li>
-            <li>object-position: Aligns replaced elements (like images or videos) inside their box.</li>
-            <li>isolation: Defines whether an element creates a new stacking context.</li>
-            <li>mix-blend-mode: Defines how an element’s content should blend with its background.</li>
-            <li>will-change: Hints to the browser what property of an element will change, allowing for
-                optimization.</li>
-            <li>contain: Limits the scope of an element's layout, style, and paint containment to optimize
-                rendering performance.</li>
+                <li>text-wrap</li>
         </ul>
 
     </main>
